--- a/Quizzed/app/src/main/res/layout/activity_login.xml
+++ b/Quizzed/app/src/main/res/layout/activity_login.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".LoginActivity">
+    tools:context=".activity.LoginActivity">
 
     <LinearLayout
         android:orientation="vertical"
@@ -58,6 +58,11 @@
             android:layout_marginTop="24dp"
             android:text="Log In" />
 
+        <com.google.android.gms.common.SignInButton
+            android:id="@+id/btnGoogleSignIn"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="24dp" />
         <TextView
             android:id="@+id/btnSignUp"
             android:layout_width="match_parent"
