--- a/Quizzed/app/src/main/res/layout/activity_login_intro.xml
+++ b/Quizzed/app/src/main/res/layout/activity_login_intro.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".LoginIntro">
+    tools:context=".activity.LoginIntro">
 
     <TextView
         android:id="@+id/txtloginSubHeader"
